After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 671984 - cogl glyph cache uses uninitialised variable.
cogl glyph cache uses uninitialised variable.
Status: RESOLVED FIXED
Product: cogl
Classification: Platform
Component: cogl-pango
git master
Other Linux
: Normal normal
: ---
Assigned To: Cogl maintainer(s)
Cogl maintainer(s)
: 674907 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2012-03-13 13:10 UTC by Dave Airlie
Modified: 2012-05-16 13:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch to fix problem (858 bytes, patch)
2012-03-13 13:10 UTC, Dave Airlie
reviewed Details | Review

Description Dave Airlie 2012-03-13 13:10:13 UTC
Created attachment 209605 [details] [review]
patch to fix problem

In cogl-pango/cogl-pango-glyph-cache.c

nobody ever sets cache->using_global_atlas to FALSE following the malloc.

noticed while valgrinding gnome-shell.
Comment 1 Emmanuele Bassi (:ebassi) 2012-03-13 13:19:43 UTC
Review of attachment 209605 [details] [review]:

looks good to me.
Comment 2 Robert Bragg 2012-03-13 13:44:13 UTC
thanks, I've pushed this to master as commit 46b1727705b461
Comment 3 Neil Roberts 2012-05-16 13:21:50 UTC
*** Bug 674907 has been marked as a duplicate of this bug. ***