cogl-glyph-cache: fix use of uninitialised value.

While valgrinding gnome-shell I noticed this value was being used
uninitialised as the memory is malloced.

https://bugzilla.gnome.org/show_bug.cgi?id=671984

Reviewed-by: Robert Bragg <robert@linux.intel.com>
Reviewed-by: Neil Roberts <neil@linux.intel.com>